# glyph-names

./: .gitmodules  .travis.yml  Cargo.toml  GNUmakefile  LICENSE  Makefile  README.md  aglfn.awk  aglfn_names.awk  longest.awk
.github/workflows/: ci.yml
mk/: before.mk
src/: aglfn.rs  aglfn_names.rs  lib.rs
