[package]
name = "glyph-names"
version = "0.1.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/glyph-names"
documentation = "https://docs.rs/crate/glyph-names"
repository = "https://github.com/yeslogic/glyph-names"

readme = "README.md"
license = "BSD-3-Clause"

description = "Mapping of characters to glyph names accoringing to the Adobe Glyph List For New Fonts"
keywords = ["glyph", "name", "font"]
categories = ["text-processing"]

[dependencies]
