[package]
name = "glyph-names"
version = "0.2.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/glyph-names"
documentation = "https://docs.rs/crate/glyph-names"
repository = "https://github.com/yeslogic/glyph-names"

readme = "README.md"
license = "BSD-3-Clause"

description = "Mapping of characters to glyph names according to the Adobe Glyph List Specification"
keywords = ["glyph", "name", "font"]
categories = ["text-processing"]
